--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     </head>
     <body>
        <h1>Hello World!</h1>
+       <button id="counter" onclick = "incrementCounter(2)">Click me</button>
+
+       <script src="script.js"></script>
     </body>   
 </html>
